--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "dev": "deno run --watch --allow-read --allow-write main.ts",
-    "day1": "deno run --watch --allow-read --allow-write ./2023/day1/day1.ts"
+    "day1": "deno run --watch --allow-read --allow-write ./2023/day1/day1.ts",
+    "day2": "deno run --watch --allow-read --allow-write ./2023/day2/day2.ts"
   }
 }
